No longer changing display style for collapsed nav item.

--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -41,7 +41,6 @@
 
                             > .item {
                                 width: 100%;
-                                display: block;
                             }
                         }
                     }
